{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Terreno",
            "id": "dbfbaff2-3fbc-4ad2-9b77-632da263a411",
            "actions": [
                {
                    "name": "Movimento",
                    "type": "Value",
                    "id": "42ca624c-3ac8-40e6-8477-5f322bf844e4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": true
                },
                {
                    "name": "Salto",
                    "type": "Button",
                    "id": "f1145eac-390e-4213-bd4c-92b0694255b0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "c800bc06-b467-45af-a482-10bd76c05d9e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.2)",
                    "initialStateCheck": false
                },
                {
                    "name": "Attacco",
                    "type": "Button",
                    "id": "e925d1be-fdf4-44e5-9608-c9d5d2cd1092",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap(duration=0.1)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "965732c9-dc67-48ca-bd4d-a7d850fad261",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movimento",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "8bf63b65-0d97-4b4c-9921-3c692e388384",
                    "path": "1DAxis",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Movimento",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "3ea5ca27-fb74-4994-a6cf-be925c340e44",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movimento",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "d63cb8ad-4e7b-4cfe-8d8f-83ef50fd6263",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movimento",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "07f7f528-ac83-4cf9-bf0a-85dea119e602",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Salto",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1fb6d48e-bf16-461f-b057-716fd6d665e8",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d2faa8b4-1141-4b28-a03c-26ba14e7e810",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attacco",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}